# CHK-shnn01

./: pyproject.toml
lib/solutions/CHK/: checkout_solution.py
lib/solutions/HLO/: hello_solution.py
lib/solutions/SUM/: sum_solution.py
