[tool.poetry]
name = "lib"
version = "0.1.0"
description = "iwoca coding exercise"
authors = ["tab1tha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tdl-client-python = "0.27.6"
coverage = "6.4.2"
pytest = "7.1.2"
pytest-cov = "3.0.0"
black = "^24.3.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
